# devcamp8-game-of-commons

./: .gitignore  Cargo.toml  HOMEWORK.md  README.md  default.nix  game-of-commons.code-workspace  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
dna/workdir/: dna.yaml
dna/zomes/game_logic/: Cargo.toml
dna/zomes/game_logic/src/: game_code.rs  game_move.rs  game_round.rs  game_session.rs  game_signals.rs  lib.rs  player_profile.rs  utils.rs
dna/zomes/game_logic/tests/: play_a_game.rs
tests/: package.json
tests/src/: index.ts  utils.ts
tests/src/game-of-commons/: game_logic.ts
ui/src/: App.svelte  main.js
workdir/: happ.yaml  web-happ.yaml
